# AZH_Network_Program

./: CMakeLists.txt  README.md
Http/: client.c  myhttp.c  myhttp.h
include/myProtocol/: http.h  httpMessage.hpp
include/mySocket/: socket.hpp
modules/: CMakeLists.txt
modules/Socket/: mysocket.c
modules/include/myProtocol/: http.h
modules/include/mySocket/: socket.h
modules/src/myProtocol/: http.c
modules/src/mySocket/: socket.c
modules/test/http/: CMakeLists.txt  client.c
src/myProtocol/: httpMessage.c
test/http/: CMakeLists.txt  client.c  client.cpp
